--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+*{
+  margin: 0px;
+  padding: 0px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.hcon{
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+ul{
+  display: flex;
+  gap: 3rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.maint{
+  color: #F4CE14;
+}
+.mainp1, .mainp2{
+  color: #EDEFEE;
+  margin-top: 3px;
+}
+.mainp2{
+  margin-bottom: 5px;
+}
+.hsec{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 18em;
+  align-items: center;
+  background-color: #495E57;
+  height: 240px;
+}
+.reserve{
+  padding: 2px 10px;
+  background-color: #F4CE14;
+  color: black;
+  border-radius: 5px;
+  text-decoration-line: none
+}
+.main1{
+  margin-top: 10px;
+  border-radius: 10px;
+}
+.specials{
+  display: flex;
+  margin-top: 30px;
+  justify-content: space-around;
+  align-items: center;
+  gap: 22em;
+}
+.specials a{
+  padding: 2px 10px;
+  background-color: #F4CE14;
+  color: black;
+  border-radius: 5px;
+  text-decoration-line: none
+}
+.meals{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.meals section{
+  background-color: rgb(210, 216, 221);
 }
